# test-manager-module

./: .travis.yml  CMakeLists.txt  README.md  RefactoringSteps.md
src/test-manager/: CMakeList.txt  CMakeLists.txt
src/test-manager/Operations/: Calculation.cpp  Calculation.h  Calibration.cpp  Calibration.h  IOperation.h  Operation.h  Quality.cpp  Quality.h
src/test-manager/Orders/: IOrder.h  Order.cpp  Order.h
src/test-manager/Tests/: Biochemistry.cpp  Biochemistry.h  BiochemistryTest.cpp  BiochemistryTest.h  Hematology.cpp  Hematology.h  HematologyTest.cpp  HematologyTest.h  ITest.h  Immunology.cpp  Immunology.h  ImmunologyTest.cpp  ImmunologyTest.h  Microbiology.cpp  Microbiology.h  MicrobiologyTest.cpp  MicrobiologyTest.h  Test.cpp  Test.h
test/test-manager/: CMakeLists.txt  main.cpp
